--- a/lib/python/Components/Makefile.am
+++ b/lib/python/Components/Makefile.am
@@ -2,4 +2,6 @@ installdir = $(pkglibdir)/python/Components
 
 SUBDIRS = Sources Converter Renderer Addons
 
-install_PYTHON = *.py
+install_PYTHON = \
+		*.py \
+		*.pyc
