--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         gcc: [13]
-        python: ['3.11', '3.12']
+        python: ['3.12']
     steps:
       - name: Install prerequisites
         run: |
@@ -40,9 +40,9 @@ jobs:
           sudo apt-get install libjpeg-turbo8-dev
           sudo apt-get install libgif-dev
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
 
