--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        gcc: [13]
-        python: ['3.12']
+        gcc: [11]
+        python: ['3.10', '3.11']
     steps:
       - name: Install prerequisites
         run: |
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get install build-essential
           sudo apt-get install automake
           sudo apt-get install libtool
-          sudo apt-get install python3-dev
+          sudo apt-get install python${{ matrix.python }}-dev
           sudo apt-get install zlib1g-dev
           sudo apt-get install gettext
           sudo apt-get install swig
@@ -40,9 +40,9 @@ jobs:
           sudo apt-get install libjpeg-turbo8-dev
           sudo apt-get install libgif-dev
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
 
