--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -38,6 +38,7 @@ jobs:
           sudo apt-get install libavahi-client-dev
           sudo apt-get install libjpeg-turbo8-dev
           sudo apt-get install libgif-dev
+          sudo apt-get install mm-common
       - uses: actions/checkout@v3
 
       - uses: actions/setup-python@v2
