export LC_ALL Thanks to @teamblue-e2

--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -42,7 +42,10 @@ fi
 # any debuglevel passed?
 DEBUG_LVL=${ENIGMA_DEBUG_LVL:-4}
 
-export LC_CTYPE="en_US.UTF-8"
+# LC_ALL available?
+if [ -z $LC_ALL ]; then
+	export LC_ALL=en_US.utf8
+fi
 
 # init script for sysctl is missing, so manually load /etc/sysctl.conf here
 sysctl -p
