--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -33,7 +33,6 @@ jobs:
           sudo apt-get install libgstreamer1.0-dev
           sudo apt-get install libgstreamer-plugins-base1.0-dev
           sudo apt-get install libfreetype6-dev
-          sudo apt-get install libsigc++-2.0-dev
           sudo apt-get install libfribidi-dev
           sudo apt-get install libssl-dev
           sudo apt-get install libavahi-client-dev
@@ -76,7 +75,14 @@ jobs:
           make
           sudo make install
           popd
-
+          echo installing libsigc++3
+          cd /tmp
+          git clone --depth 1 https://github.com/libsigcplusplus/libsigcplusplus.git
+          cd libsigcplusplus
+          ./autogen.sh
+          make
+          sudo make install
+          popd
       - name: Build enigma2
         env:
           CC: "gcc-${{ matrix.gcc }}"
