--- a/.github/workflows/enigma2.yml
+++ b/.github/workflows/enigma2.yml
@@ -2,9 +2,9 @@ name: enigma2 build
 
 on:
   push:
-    branches: [ 7.3, 7.3-dev ]
+    branches: [ 7.3-dev ]
   pull_request:
-    branches: [ 7.3, 7.3-dev ]
+    branches: [ 7.3-dev ]
 
 jobs:
   build:
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        gcc: [13]
-        python: ['3.11', '3.12']
+        gcc: [11]
+        python: ['3.10', '3.11']
     steps:
       - name: Install prerequisites
         run: |
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get install build-essential
           sudo apt-get install automake
           sudo apt-get install libtool
-          sudo apt-get install python3-dev
+          sudo apt-get install python${{ matrix.python }}-dev
           sudo apt-get install zlib1g-dev
           sudo apt-get install gettext
           sudo apt-get install swig
@@ -39,10 +39,9 @@ jobs:
           sudo apt-get install libjpeg-turbo8-dev
           sudo apt-get install libgif-dev
           sudo apt-get install mm-common
+      - uses: actions/checkout@v3
 
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
 
@@ -78,10 +77,9 @@ jobs:
           popd
           echo installing libsigc++3
           cd /tmp
-          git clone --depth 1 https://github.com/dbus-cxx/libsigc--3.0.git
-          cd libsigc--3.0
-          autoreconf -i
-          ./configure
+          git clone --depth 1 https://github.com/libsigcplusplus/libsigcplusplus.git
+          cd libsigcplusplus
+          ./autogen.sh
           make
           sudo make install
           popd
