--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -37,15 +37,15 @@ enigma2_LDADD = \
 	@BASE_LIBS@ \
 	@LIBGIF_LIBS@ \
 	@LIBJPEG_LIBS@ \
+	@LIBVUGLES2_LIBS@ \
 	@LIBSDL_LIBS@ \
 	@LIBXINE_LIBS@ \
 	@PTHREAD_LIBS@ \
 	@PYTHON_LIBS@ \
 	@LIBDDVD_LIBS@ \
-	@ALSA_LIBS@ \
 	@AVAHI_LIBS@ \
-	@LIBDL_LIBS@ \
-	-ltuxtxt32bpp
+	@LIBHIACCEL_LIBS@ \
+	-ltuxtxt32bpp -lcrypt -lrt -ldl
 
 enigma2_LDFLAGS = -Wl,--export-dynamic
 
@@ -59,7 +59,7 @@ ENIGMA2_BRANCH = `cat $(GIT_DIR)/branch`
 else
 ENIGMA2_COMMIT_DATE = `$(GIT) log --no-color -n 1 --pretty=format:%cd --date=short`
 ENIGMA2_BRANCH = `$(GIT) branch --no-color 2>/dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/\1/'`
-ENIGMA2_REV = `$(GIT) rev-parse --short HEAD`
+ENIGMA2_REV = `$(GIT) describe --abbrev=7 --always --long --tags`
 endif
 endif
 
